# Advent-of-Code-2020-CPP

./: README.md
BinaryBoarding/BinaryBoarding/: BinaryBoarding.cpp  BinaryBoarding.h  BinaryBoarding.txt  BinaryBoardingTest.cpp  BoardingPass.cpp  BoardingPass.h  CMakeLists.txt  PassengerRoster.cpp  PassengerRoster.h  file_helpers.cpp  file_helpers.h
BinaryBoarding/BinaryBoarding/test/: catch.hpp
ExpenseReport/: CMakeLists.txt
ExpenseReport/ExpenseReport/: CMakeLists.txt  ExpenseReport.cpp  ExpenseReport.h  ExpenseReport_test.cpp
PassportProcessing/PassportProcessing/: CMakeLists.txt  PassportProcessing.cpp  PassportProcessing.h  PassportProcessingTest.cpp
PasswordPolicy/PasswordPolicy/: CMakeLists.txt  PasswordPolicy.cpp  PasswordPolicy.h  PasswordPolicy_test.cpp
PasswordPolicy/PasswordPolicy/test/: catch.hpp
TobogganTrajectory/: CMakeLists.txt
TobogganTrajectory/TobogganTrajectory/: TobogganTrajectory.cpp  TobogganTrajectory.h  TobogganTrajectoryTest.cpp
